adicionei um paragráfo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat natus esse quam odit quasi accusantium libero veritatis beatae facere! Dolorem quibusdam exercitationem, unde veniam id tempore ab deleniti voluptas eius!</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum ducimus laudantium nostrum obcaecati quo odit repellendus rerum provident dolores illo, doloremque voluptatibus corporis veritatis inventore non, suscipit culpa earum. Quibusdam.</p>
 </body>
 </html>
